tests/typecheck/should_fail/T7210.hs
module T7210 where

import Data.IntMap

data T = C { f :: !IntMap Int }
